--- a/doc/latex/d0/d8c/shellbuiltins_8h.tex
+++ b/doc/latex/d0/d8c/shellbuiltins_8h.tex
@@ -77,9 +77,7 @@ For each shell run, the background processors are checked and signaled.
 
 Resumes the most recently stopped job in the background, or the job specified by job\+\_\+id. 
 
-Example Usage\+: bg Example Usage\+: bg 2 (job\+\_\+id is 2) error\+: PID with specified number does not exist
-
-error\+: there are no stopped jobs\Hypertarget{shellbuiltins_8h_a522b7a9dcadf792f7d79b3211f8bba9f}\label{shellbuiltins_8h_a522b7a9dcadf792f7d79b3211f8bba9f} 
+Example Usage\+: bg Example Usage\+: bg 2 (job\+\_\+id is 2) \Hypertarget{shellbuiltins_8h_a522b7a9dcadf792f7d79b3211f8bba9f}\label{shellbuiltins_8h_a522b7a9dcadf792f7d79b3211f8bba9f} 
 \index{shellbuiltins.h@{shellbuiltins.h}!b\_busy@{b\_busy}}
 \index{b\_busy@{b\_busy}!shellbuiltins.h@{shellbuiltins.h}}
 \doxysubsubsection{\texorpdfstring{b\_busy()}{b\_busy()}}
@@ -162,15 +160,7 @@ Example Usage\+: echo Hello World \Hypertarget{shellbuiltins_8h_ad11ad4f83749953
 
 Brings the most recently stopped or background job to the foreground, or the job specified by job\+\_\+id. 
 
-Example Usage\+: fg Example Usage\+: fg 2 (job\+\_\+id is 2) TODO\+: immediate send to tcprescp
-
-TODO\+: immediate send to tcprescp
-
-error\+: PID with specified number does not exist
-
-TODO\+: immediate send to tcprescp
-
-TODO\+: immediate send to tcprescp\Hypertarget{shellbuiltins_8h_add6abae88d55c1b8ee57843799af9730}\label{shellbuiltins_8h_add6abae88d55c1b8ee57843799af9730} 
+Example Usage\+: fg Example Usage\+: fg 2 (job\+\_\+id is 2) \Hypertarget{shellbuiltins_8h_add6abae88d55c1b8ee57843799af9730}\label{shellbuiltins_8h_add6abae88d55c1b8ee57843799af9730} 
 \index{shellbuiltins.h@{shellbuiltins.h}!b\_jobs@{b\_jobs}}
 \index{b\_jobs@{b\_jobs}!shellbuiltins.h@{shellbuiltins.h}}
 \doxysubsubsection{\texorpdfstring{b\_jobs()}{b\_jobs()}}
@@ -292,7 +282,7 @@ Example Usage\+: orphanify \Hypertarget{shellbuiltins_8h_a18df407e357bc44721dd39
 
 List all processes on Penn\+OS, displaying PID, PPID, priority, status, and command name. 
 
-Example Usage\+: ps not sure if order has to change\Hypertarget{shellbuiltins_8h_aa583bdf1b3a5fbfb577ad5a7230fe054}\label{shellbuiltins_8h_aa583bdf1b3a5fbfb577ad5a7230fe054} 
+Example Usage\+: ps \Hypertarget{shellbuiltins_8h_aa583bdf1b3a5fbfb577ad5a7230fe054}\label{shellbuiltins_8h_aa583bdf1b3a5fbfb577ad5a7230fe054} 
 \index{shellbuiltins.h@{shellbuiltins.h}!b\_rm@{b\_rm}}
 \index{b\_rm@{b\_rm}!shellbuiltins.h@{shellbuiltins.h}}
 \doxysubsubsection{\texorpdfstring{b\_rm()}{b\_rm()}}
