--- a/doc/latex/d0/daa/kernel_8h.tex
+++ b/doc/latex/d0/daa/kernel_8h.tex
@@ -7,7 +7,7 @@
 {\ttfamily \#include "{}globals.\+h"{}}\newline
 {\ttfamily \#include "{}spthread.\+h"{}}\newline
 {\ttfamily \#include "{}stdlib.\+h"{}}\newline
-{\ttfamily \#include "{}syscall.\+h"{}}\newline
+{\ttfamily \#include "{}sys\+\_\+call.\+h"{}}\newline
 \doxysubsubsection*{Data Structures}
 \begin{DoxyCompactItemize}
 \item 
@@ -134,7 +134,7 @@ Clean up a terminated/finished thread\textquotesingle{}s resources. This may inc
 {\em proc} & This is a pointer to the process control block of a process that has terminated. \\
 \hline
 \end{DoxyParams}
-need to kill all children\Hypertarget{kernel_8h_a736760f5a73bbd7d6c9e4607c49837a3}\label{kernel_8h_a736760f5a73bbd7d6c9e4607c49837a3} 
+need more\Hypertarget{kernel_8h_a736760f5a73bbd7d6c9e4607c49837a3}\label{kernel_8h_a736760f5a73bbd7d6c9e4607c49837a3} 
 \index{kernel.h@{kernel.h}!k\_proc\_create@{k\_proc\_create}}
 \index{k\_proc\_create@{k\_proc\_create}!kernel.h@{kernel.h}}
 \doxysubsubsection{\texorpdfstring{k\_proc\_create()}{k\_proc\_create()}}
