--- a/doc/latex/d2/d50/stress_8h.tex
+++ b/doc/latex/d2/d50/stress_8h.tex
@@ -1,6 +1,7 @@
 \doxysection{src/util/stress.h File Reference}
 \hypertarget{stress_8h}{}\label{stress_8h}\index{src/util/stress.h@{src/util/stress.h}}
 {\ttfamily \#include "{}sys\+\_\+call.\+h"{}}\newline
+{\ttfamily \#include "{}globals.\+h"{}}\newline
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
