--- a/doc/latex/d2/d50/stress_8h_source.tex
+++ b/doc/latex/d2/d50/stress_8h_source.tex
@@ -5,10 +5,11 @@
 \DoxyCodeLine{00001\ \textcolor{preprocessor}{\#ifndef\ STRESS\_H}}
 \DoxyCodeLine{00002\ \textcolor{preprocessor}{\#define\ STRESS\_H}}
 \DoxyCodeLine{00003\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{sys__call_8h}{sys\_call.h}}"{}}}
-\DoxyCodeLine{00004\ \textcolor{keywordtype}{void}*\ \mbox{\hyperlink{stress_8h_a4c08edd840fcf36dfb92da0951c2947d}{hang}}(\textcolor{keywordtype}{void}*);}
-\DoxyCodeLine{00005\ \textcolor{keywordtype}{void}*\ \mbox{\hyperlink{stress_8h_a99004c430d856150a82e88502c4000f4}{nohang}}(\textcolor{keywordtype}{void}*);}
-\DoxyCodeLine{00006\ \textcolor{keywordtype}{void}*\ \mbox{\hyperlink{stress_8h_abfecdf2a801ac0700e511fd91e0f782e}{recur}}(\textcolor{keywordtype}{void}*);}
-\DoxyCodeLine{00007\ }
-\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00004\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{globals_8h}{globals.h}}"{}}}
+\DoxyCodeLine{00005\ \textcolor{keywordtype}{void}*\ \mbox{\hyperlink{stress_8h_a4c08edd840fcf36dfb92da0951c2947d}{hang}}(\textcolor{keywordtype}{void}*);}
+\DoxyCodeLine{00006\ \textcolor{keywordtype}{void}*\ \mbox{\hyperlink{stress_8h_a99004c430d856150a82e88502c4000f4}{nohang}}(\textcolor{keywordtype}{void}*);}
+\DoxyCodeLine{00007\ \textcolor{keywordtype}{void}*\ \mbox{\hyperlink{stress_8h_abfecdf2a801ac0700e511fd91e0f782e}{recur}}(\textcolor{keywordtype}{void}*);}
+\DoxyCodeLine{00008\ }
+\DoxyCodeLine{00009\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
