--- a/doc/latex/d4/dc4/pennfat_8c.tex
+++ b/doc/latex/d4/dc4/pennfat_8c.tex
@@ -13,6 +13,8 @@ void \mbox{\hyperlink{pennfat_8c_a95c1eedbf28e070d02d04fbbb832a3b8}{int\+\_\+han
 \begin{DoxyCompactList}\small\item\em Helper function that handles CTRL-\/Z. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{pennfat_8c_a7d5ac507ab09ed439fe59e6ba52e6374}{initialize\+\_\+global\+\_\+fd\+\_\+table}} ()
 \begin{DoxyCompactList}\small\item\em Initializes global fd table with stdin, stdout, and stderr. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{pennfat_8c_ad9cbb2c6de69fff159fe38f137afa179}{free\+\_\+global\+\_\+fd\+\_\+table}} ()
+\item 
 void \mbox{\hyperlink{pennfat_8c_adf6e89b78280efda4b5c486c9697b513}{mkfs}} (const char \texorpdfstring{$\ast$}{*}fs\+\_\+name, int blocks\+\_\+in\+\_\+fat, int block\+\_\+size\+\_\+config)
 \begin{DoxyCompactList}\small\item\em Creates a "{}filesytem"{} (file on host device) with name {\ttfamily fs\+\_\+name} with each of the {\ttfamily blocks\+\_\+in\+\_\+fat} blocks of size specified via {\ttfamily block\+\_\+size\+\_\+config} . \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{pennfat_8c_a2fe0ff1115fb73cfaef3441eb8d77426}{mount}} (const char \texorpdfstring{$\ast$}{*}fs\+\_\+name)
@@ -43,7 +45,7 @@ void \mbox{\hyperlink{pennfat_8c_a474b370f4b5879f82110fdca97892348}{cat\+\_\+w}}
 \begin{DoxyCompactList}\small\item\em Implements cat function that reads from terminal and writes to {\ttfamily output} file. Creates {\ttfamily output} file if it doesn\textquotesingle{}t exist. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{pennfat_8c_ab188252d77516fed55f14aee897fcaf8}{cat\+\_\+a}} (char \texorpdfstring{$\ast$}{*}output)
 \begin{DoxyCompactList}\small\item\em Implements cat function that reads from terminal and appends to {\ttfamily output} file. Creates {\ttfamily output} file if it doesn\textquotesingle{}t exist. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{pennfat_8c_a0a4a3cef40cd8acefe8d3913380a814a}{ls}} ()
+int \mbox{\hyperlink{pennfat_8c_a95b380ceb023b12c760335e1b365c331}{ls}} (char \texorpdfstring{$\ast$}{*}filename)
 \begin{DoxyCompactList}\small\item\em Implements standard ls function. \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{pennfat_8c_a96e0c0752c3a4f14c705c8438d4e1d32}{cp\+\_\+within\+\_\+fat}} (char \texorpdfstring{$\ast$}{*}source, char \texorpdfstring{$\ast$}{*}dest)
 \begin{DoxyCompactList}\small\item\em Implements cp function of copying within the fat by calling k\+\_\+cp\+\_\+within\+\_\+fat Creates {\ttfamily dest} file if it doesn\textquotesingle{}t exist, {\ttfamily source} must exist. \end{DoxyCompactList}\item 
@@ -174,6 +176,12 @@ Implements cp function of copying within the fat by calling k\+\_\+cp\+\_\+withi
 \begin{DoxyReturn}{Returns}
 -\/1 on error, 0 if successful 
 \end{DoxyReturn}
+\Hypertarget{pennfat_8c_ad9cbb2c6de69fff159fe38f137afa179}\label{pennfat_8c_ad9cbb2c6de69fff159fe38f137afa179} 
+\index{pennfat.c@{pennfat.c}!free\_global\_fd\_table@{free\_global\_fd\_table}}
+\index{free\_global\_fd\_table@{free\_global\_fd\_table}!pennfat.c@{pennfat.c}}
+\doxysubsubsection{\texorpdfstring{free\_global\_fd\_table()}{free\_global\_fd\_table()}}
+{\footnotesize\ttfamily void free\+\_\+global\+\_\+fd\+\_\+table (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
 \Hypertarget{pennfat_8c_a1d5876a5f78107bed3847c8d5485b7c4}\label{pennfat_8c_a1d5876a5f78107bed3847c8d5485b7c4} 
 \index{pennfat.c@{pennfat.c}!get\_block\_size@{get\_block\_size}}
 \index{get\_block\_size@{get\_block\_size}!pennfat.c@{pennfat.c}}
@@ -297,11 +305,11 @@ Helper function that handles CTRL-\/Z.
 {\em signo} & Signal for int handler \\
 \hline
 \end{DoxyParams}
-\Hypertarget{pennfat_8c_a0a4a3cef40cd8acefe8d3913380a814a}\label{pennfat_8c_a0a4a3cef40cd8acefe8d3913380a814a} 
+\Hypertarget{pennfat_8c_a95b380ceb023b12c760335e1b365c331}\label{pennfat_8c_a95b380ceb023b12c760335e1b365c331} 
 \index{pennfat.c@{pennfat.c}!ls@{ls}}
 \index{ls@{ls}!pennfat.c@{pennfat.c}}
 \doxysubsubsection{\texorpdfstring{ls()}{ls()}}
-{\footnotesize\ttfamily void ls (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily int ls (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}}]{filename }\end{DoxyParamCaption})}
 
 
 
