--- a/doc/latex/d5/d87/globals_8h_source.tex
+++ b/doc/latex/d5/d87/globals_8h_source.tex
@@ -21,14 +21,16 @@
 \DoxyCodeLine{00040\ }
 \DoxyCodeLine{00046\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{globals_8h_aadfd9da35df54aa07940062a8b8326e2}{current}};}
 \DoxyCodeLine{00047\ }
-\DoxyCodeLine{00055\ \textcolor{keyword}{extern}\ pid\_t\ \mbox{\hyperlink{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\_pid}};}
-\DoxyCodeLine{00056\ }
-\DoxyCodeLine{00062\ \textcolor{keyword}{extern}\ uint64\_t\ \mbox{\hyperlink{globals_8h_a6eaa855e821dfd115dd64e929aeb6102}{job\_id}};}
+\DoxyCodeLine{00053\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{globals_8h_a1f65fd8fbd2801faa7b2aba622ffe5ee}{fg\_proc}};}
+\DoxyCodeLine{00054\ }
+\DoxyCodeLine{00062\ \textcolor{keyword}{extern}\ pid\_t\ \mbox{\hyperlink{globals_8h_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\_pid}};}
 \DoxyCodeLine{00063\ }
-\DoxyCodeLine{00069\ \textcolor{keyword}{extern}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{globals_8h_abfb6a5b45038dfab7134f82adad169d7}{logfiledescriptor}};}
+\DoxyCodeLine{00069\ \textcolor{keyword}{extern}\ uint64\_t\ \mbox{\hyperlink{globals_8h_a6eaa855e821dfd115dd64e929aeb6102}{job\_id}};}
 \DoxyCodeLine{00070\ }
-\DoxyCodeLine{00076\ \textcolor{keyword}{extern}\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{globals_8h_a6c17b5754a836f005f69312ee0080106}{tick}};}
+\DoxyCodeLine{00076\ \textcolor{keyword}{extern}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{globals_8h_abfb6a5b45038dfab7134f82adad169d7}{logfiledescriptor}};}
 \DoxyCodeLine{00077\ }
-\DoxyCodeLine{00078\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00083\ \textcolor{keyword}{extern}\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{globals_8h_a6c17b5754a836f005f69312ee0080106}{tick}};}
+\DoxyCodeLine{00084\ }
+\DoxyCodeLine{00085\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
