--- a/doc/latex/d6/dda/prioritylist_8h_source.tex
+++ b/doc/latex/d6/dda/prioritylist_8h_source.tex
@@ -24,6 +24,8 @@
 \DoxyCodeLine{00038\ }
 \DoxyCodeLine{00045\ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{prioritylist_8h_acf5ffc2a9a57d64a940360fe6151aafc}{remove\_priority}}(\mbox{\hyperlink{structPList}{PList}}*\ list,\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{pennos_8c_a2e0cca4a43c21259b881d59c96c74fe0}{priority}});}
 \DoxyCodeLine{00046\ }
-\DoxyCodeLine{00047\ \textcolor{preprocessor}{\#endif\ \ }\textcolor{comment}{//\ SCHEDULER\_LIST\_H}}
+\DoxyCodeLine{00053\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{prioritylist_8h_a04b1079ddfca468066c501ed3a780109}{free\_plist}}(\mbox{\hyperlink{structPList}{PList}}*\ list);}
+\DoxyCodeLine{00054\ }
+\DoxyCodeLine{00055\ \textcolor{preprocessor}{\#endif\ \ }\textcolor{comment}{//\ SCHEDULER\_LIST\_H}}
 
 \end{DoxyCode}
