--- a/doc/latex/index.tex
+++ b/doc/latex/index.tex
@@ -2,8 +2,10 @@
 \hypertarget{index}{}\label{index}\index{PennOS@{PennOS}}
 \label{index_md_doc_2README}%
 \Hypertarget{index_md_doc_2README}%
- Welcome to Penn\+OS, a project designed to simulate the functionalities of a UNIX-\/like operating system. This project was created by Aaron Tsui, Matt Park, Joesph Cho, and Maya Huizar.\hypertarget{index_autotoc_md0}{}\doxysubsection{\texorpdfstring{Overview}{Overview}}\label{index_autotoc_md0}
-Penn\+OS is a UNIX-\/like operating system that runs as a guest OS within a single process on a host OS. It includes implementations of a basic priority scheduler, a FAT file system (Penn\+FAT), and user shell interactions.\hypertarget{index_autotoc_md1}{}\doxysubsection{\texorpdfstring{Documentation}{Documentation}}\label{index_autotoc_md1}
+ Welcome to Penn\+OS, a project designed to simulate the functionalities of a UNIX-\/like operating system. This project was created by Aaron Tsui, Matt Park, Joesph Cho, and Maya Huizar.
+
+Aaron Tsui\+: Penn\+ID 70714281 Matt Park\+: Penn\+ID Joseph Cho\+: Penn\+ID Maya Huizar\+: Penn\+ID\hypertarget{index_autotoc_md12}{}\doxysubsection{\texorpdfstring{Overview}{Overview}}\label{index_autotoc_md12}
+Penn\+OS is a UNIX-\/like operating system that runs as a guest OS within a single process on a host OS. It includes implementations of a basic priority scheduler, a FAT file system (Penn\+FAT), and user shell interactions.\hypertarget{index_autotoc_md13}{}\doxysubsection{\texorpdfstring{Documentation}{Documentation}}\label{index_autotoc_md13}
 
 \begin{DoxyItemize}
 \item \doxysectlink{md_doc_2kernel}{{\bfseries{Kernel Documentation}}}{0}\+: Here is an overview of the Kernel, Scheduler, and Shell, and its related functions and structure.
