--- a/doc/latex/d6/dda/prioritylist_8h.tex
+++ b/doc/latex/d6/dda/prioritylist_8h.tex
@@ -21,6 +21,8 @@ typedef struct PNode \mbox{\hyperlink{prioritylist_8h_a2f668b1e28514742fc24defa9
 void \mbox{\hyperlink{prioritylist_8h_a00f10d8a58f009415a3ee62349834249}{add\+\_\+priority}} (\mbox{\hyperlink{structPList}{PList}} \texorpdfstring{$\ast$}{*}list, unsigned int \mbox{\hyperlink{pennos_8c_a2e0cca4a43c21259b881d59c96c74fe0}{priority}})
 \item 
 bool \mbox{\hyperlink{prioritylist_8h_acf5ffc2a9a57d64a940360fe6151aafc}{remove\+\_\+priority}} (\mbox{\hyperlink{structPList}{PList}} \texorpdfstring{$\ast$}{*}list, unsigned int \mbox{\hyperlink{pennos_8c_a2e0cca4a43c21259b881d59c96c74fe0}{priority}})
+\item 
+void \mbox{\hyperlink{prioritylist_8h_a04b1079ddfca468066c501ed3a780109}{free\+\_\+plist}} (\mbox{\hyperlink{structPList}{PList}} \texorpdfstring{$\ast$}{*}list)
 \end{DoxyCompactItemize}
 
 
@@ -45,6 +47,19 @@ Adds a new process to the circular linked list.
 {\em list} & Pointer to the circular linked list. \\
 \hline
 {\em process} & Pointer to the process control block (\doxylink{structpcb__t}{pcb\+\_\+t}) to add. \\
+\hline
+\end{DoxyParams}
+\Hypertarget{prioritylist_8h_a04b1079ddfca468066c501ed3a780109}\label{prioritylist_8h_a04b1079ddfca468066c501ed3a780109} 
+\index{prioritylist.h@{prioritylist.h}!free\_plist@{free\_plist}}
+\index{free\_plist@{free\_plist}!prioritylist.h@{prioritylist.h}}
+\doxysubsubsection{\texorpdfstring{free\_plist()}{free\_plist()}}
+{\footnotesize\ttfamily void free\+\_\+plist (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{structPList}{PList}} \texorpdfstring{$\ast$}{*}}]{list }\end{DoxyParamCaption})}
+
+Frees all nodes and their associated processes in a circular linked list, then frees the list itself.
+
+
+\begin{DoxyParams}{Parameters}
+{\em list} & Pointer to the circular linked list to free. \\
 \hline
 \end{DoxyParams}
 \Hypertarget{prioritylist_8h_ac55c6aca6e9e03dc0c52ef4fff694e29}\label{prioritylist_8h_ac55c6aca6e9e03dc0c52ef4fff694e29} 
