--- a/doc/latex/d7/d12/clinkedlist_8h_source.tex
+++ b/doc/latex/d7/d12/clinkedlist_8h_source.tex
@@ -7,32 +7,35 @@
 \DoxyCodeLine{00003\ }
 \DoxyCodeLine{00004\ \textcolor{preprocessor}{\#include\ <stdbool.h>}}
 \DoxyCodeLine{00005\ \textcolor{preprocessor}{\#include\ <sys/types.h>}}
-\DoxyCodeLine{00006\ }
-\DoxyCodeLine{00007\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{structpcb__t}{pcb\_t}}\ \mbox{\hyperlink{structpcb__t}{pcb\_t}};}
-\DoxyCodeLine{00008\ }
-\DoxyCodeLine{00013\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{structNode}{Node}}\ \{}
-\DoxyCodeLine{00014\ \ \ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{structNode_adbf20bfd8d88beabfe71bfd053f61959}{process}};\ \ \ \ }
-\DoxyCodeLine{00015\ \ \ \textcolor{keyword}{struct\ }\mbox{\hyperlink{structNode}{Node}}*\ \mbox{\hyperlink{structNode_af67b110ca1a258b793bf69d306929b22}{next}};\ }
-\DoxyCodeLine{00016\ \}\ \mbox{\hyperlink{clinkedlist_8h_a3b09f37e675bcd48a01bf22155996872}{Node}};}
-\DoxyCodeLine{00017\ }
-\DoxyCodeLine{00023\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct\ }\{}
-\DoxyCodeLine{00024\ \ \ \mbox{\hyperlink{structNode}{Node}}*\ \mbox{\hyperlink{structCircularList_aafe5473577e9735e5a874c9e85a7ee9e}{head}};\ \ \ \ \ \ \ \ }
-\DoxyCodeLine{00025\ \ \ \mbox{\hyperlink{structNode}{Node}}*\ \mbox{\hyperlink{structCircularList_afe69fc77ea1e97da5895f1d7ffd45419}{tail}};\ \ \ \ \ \ \ \ }
-\DoxyCodeLine{00026\ \ \ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{structCircularList_a539564e372827a5e24044ce3c9397ada}{size}};\ }
-\DoxyCodeLine{00027\ \}\ \mbox{\hyperlink{structCircularList}{CircularList}};}
-\DoxyCodeLine{00028\ }
-\DoxyCodeLine{00033\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{clinkedlist_8h_a40af759c666c8683b21e533eae304bd5}{init\_list}}(\textcolor{keywordtype}{void});}
-\DoxyCodeLine{00034\ }
-\DoxyCodeLine{00040\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{clinkedlist_8h_aa502493a1fe088e8763033dcc4fc4839}{add\_process}}(\mbox{\hyperlink{structCircularList}{CircularList}}*\ list,\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ process);}
-\DoxyCodeLine{00041\ }
-\DoxyCodeLine{00047\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{clinkedlist_8h_a65cec0c339fb28e407b3c42a9108a53b}{add\_process\_front}}(\mbox{\hyperlink{structCircularList}{CircularList}}*\ list,\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ process);}
-\DoxyCodeLine{00048\ }
-\DoxyCodeLine{00055\ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{clinkedlist_8h_a6d27d9f54d9189fe8149a2d8cb8baa24}{remove\_process}}(\mbox{\hyperlink{structCircularList}{CircularList}}*\ list,\ pid\_t\ pid);}
-\DoxyCodeLine{00056\ }
-\DoxyCodeLine{00064\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{clinkedlist_8h_a43d3a5a52f3e2c3d607e50ac257cb67b}{find\_process}}(\mbox{\hyperlink{structCircularList}{CircularList}}*\ list,\ pid\_t\ pid);}
-\DoxyCodeLine{00065\ }
-\DoxyCodeLine{00073\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{clinkedlist_8h_afde8f3d4e1dd02b36cf5b7d2c3ac7b5e}{find\_process\_job\_id}}(\mbox{\hyperlink{structCircularList}{CircularList}}*\ list,\ u\_int64\_t\ index);}
-\DoxyCodeLine{00074\ }
-\DoxyCodeLine{00075\ \textcolor{preprocessor}{\#endif\ \ }\textcolor{comment}{//\ SCHEDULER\_LIST\_H}}
+\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ <stdlib.h>}}
+\DoxyCodeLine{00007\ }
+\DoxyCodeLine{00008\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{structpcb__t}{pcb\_t}}\ \mbox{\hyperlink{structpcb__t}{pcb\_t}};}
+\DoxyCodeLine{00009\ }
+\DoxyCodeLine{00014\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{structNode}{Node}}\ \{}
+\DoxyCodeLine{00015\ \ \ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{structNode_adbf20bfd8d88beabfe71bfd053f61959}{process}};\ \ \ \ }
+\DoxyCodeLine{00016\ \ \ \textcolor{keyword}{struct\ }\mbox{\hyperlink{structNode}{Node}}*\ \mbox{\hyperlink{structNode_af67b110ca1a258b793bf69d306929b22}{next}};\ }
+\DoxyCodeLine{00017\ \}\ \mbox{\hyperlink{clinkedlist_8h_a3b09f37e675bcd48a01bf22155996872}{Node}};}
+\DoxyCodeLine{00018\ }
+\DoxyCodeLine{00024\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct\ }\{}
+\DoxyCodeLine{00025\ \ \ \mbox{\hyperlink{structNode}{Node}}*\ \mbox{\hyperlink{structCircularList_aafe5473577e9735e5a874c9e85a7ee9e}{head}};\ \ \ \ \ \ \ \ }
+\DoxyCodeLine{00026\ \ \ \mbox{\hyperlink{structNode}{Node}}*\ \mbox{\hyperlink{structCircularList_afe69fc77ea1e97da5895f1d7ffd45419}{tail}};\ \ \ \ \ \ \ \ }
+\DoxyCodeLine{00027\ \ \ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{structCircularList_a539564e372827a5e24044ce3c9397ada}{size}};\ }
+\DoxyCodeLine{00028\ \}\ \mbox{\hyperlink{structCircularList}{CircularList}};}
+\DoxyCodeLine{00029\ }
+\DoxyCodeLine{00034\ \mbox{\hyperlink{structCircularList}{CircularList}}*\ \mbox{\hyperlink{clinkedlist_8h_a40af759c666c8683b21e533eae304bd5}{init\_list}}(\textcolor{keywordtype}{void});}
+\DoxyCodeLine{00035\ }
+\DoxyCodeLine{00041\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{clinkedlist_8h_aa502493a1fe088e8763033dcc4fc4839}{add\_process}}(\mbox{\hyperlink{structCircularList}{CircularList}}*\ list,\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ process);}
+\DoxyCodeLine{00042\ }
+\DoxyCodeLine{00048\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{clinkedlist_8h_a65cec0c339fb28e407b3c42a9108a53b}{add\_process\_front}}(\mbox{\hyperlink{structCircularList}{CircularList}}*\ list,\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ process);}
+\DoxyCodeLine{00049\ }
+\DoxyCodeLine{00056\ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{clinkedlist_8h_a6d27d9f54d9189fe8149a2d8cb8baa24}{remove\_process}}(\mbox{\hyperlink{structCircularList}{CircularList}}*\ list,\ pid\_t\ pid);}
+\DoxyCodeLine{00057\ }
+\DoxyCodeLine{00065\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{clinkedlist_8h_a43d3a5a52f3e2c3d607e50ac257cb67b}{find\_process}}(\mbox{\hyperlink{structCircularList}{CircularList}}*\ list,\ pid\_t\ pid);}
+\DoxyCodeLine{00066\ }
+\DoxyCodeLine{00074\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{clinkedlist_8h_a93feeabf0e4c437893534f57a930659d}{find\_process\_job\_id}}(\mbox{\hyperlink{structCircularList}{CircularList}}*\ list,\ \textcolor{keywordtype}{int}\ index);}
+\DoxyCodeLine{00075\ }
+\DoxyCodeLine{00082\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{clinkedlist_8h_acefe7c8742f5696c1a8a9fb4da0ec23b}{free\_list}}(\mbox{\hyperlink{structCircularList}{CircularList}}*\ list);}
+\DoxyCodeLine{00083\ }
+\DoxyCodeLine{00084\ \textcolor{preprocessor}{\#endif\ \ }\textcolor{comment}{//\ SCHEDULER\_LIST\_H}}
 
 \end{DoxyCode}
