--- a/doc/latex/d9/d26/kernel_8c.tex
+++ b/doc/latex/d9/d26/kernel_8c.tex
@@ -27,7 +27,7 @@ Clean up a terminated/finished thread\textquotesingle{}s resources. This may inc
 {\em proc} & This is a pointer to the process control block of a process that has terminated. \\
 \hline
 \end{DoxyParams}
-need to kill all children\Hypertarget{kernel_8c_a736760f5a73bbd7d6c9e4607c49837a3}\label{kernel_8c_a736760f5a73bbd7d6c9e4607c49837a3} 
+need more\Hypertarget{kernel_8c_a736760f5a73bbd7d6c9e4607c49837a3}\label{kernel_8c_a736760f5a73bbd7d6c9e4607c49837a3} 
 \index{kernel.c@{kernel.c}!k\_proc\_create@{k\_proc\_create}}
 \index{k\_proc\_create@{k\_proc\_create}!kernel.c@{kernel.c}}
 \doxysubsubsection{\texorpdfstring{k\_proc\_create()}{k\_proc\_create()}}
