--- a/doc/latex/db/d28/globals_8c.tex
+++ b/doc/latex/db/d28/globals_8c.tex
@@ -14,6 +14,8 @@
 \item 
 \mbox{\hyperlink{structCircularList}{Circular\+List}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8c_a094c1776b4826f9aff421225ba8bd96f}{bg\+\_\+list}}
 \item 
+\mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8c_a1f65fd8fbd2801faa7b2aba622ffe5ee}{fg\+\_\+proc}} = NULL
+\item 
 \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}} \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{globals_8c_aadfd9da35df54aa07940062a8b8326e2}{current}} = NULL
 \item 
 pid\+\_\+t \mbox{\hyperlink{globals_8c_a54a60f61f4b468b7e6ef164c4b5ba60b}{next\+\_\+pid}} = 1
@@ -45,7 +47,13 @@ A global pointer to the process list of blocked processes. Processes enter this 
 \doxysubsubsection{\texorpdfstring{current}{current}}
 {\footnotesize\ttfamily \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}}\texorpdfstring{$\ast$}{*} current = NULL}
 
-This is the currently scheduled process. It can be accessed by any method to easily access the current method. \Hypertarget{globals_8c_a6eaa855e821dfd115dd64e929aeb6102}\label{globals_8c_a6eaa855e821dfd115dd64e929aeb6102} 
+This is the currently scheduled process. It can be accessed by any method to easily access the current method. \Hypertarget{globals_8c_a1f65fd8fbd2801faa7b2aba622ffe5ee}\label{globals_8c_a1f65fd8fbd2801faa7b2aba622ffe5ee} 
+\index{globals.c@{globals.c}!fg\_proc@{fg\_proc}}
+\index{fg\_proc@{fg\_proc}!globals.c@{globals.c}}
+\doxysubsubsection{\texorpdfstring{fg\_proc}{fg\_proc}}
+{\footnotesize\ttfamily \mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}}\texorpdfstring{$\ast$}{*} fg\+\_\+proc = NULL}
+
+This is the foreground processor and if it exists, the processor takes control of the terminal \Hypertarget{globals_8c_a6eaa855e821dfd115dd64e929aeb6102}\label{globals_8c_a6eaa855e821dfd115dd64e929aeb6102} 
 \index{globals.c@{globals.c}!job\_id@{job\_id}}
 \index{job\_id@{job\_id}!globals.c@{globals.c}}
 \doxysubsubsection{\texorpdfstring{job\_id}{job\_id}}
